
Improved malloc routines from the current version of Doug Lea's malloc
(as suggested by David Teller) should enable large memory areas to be
used more effectively, in particular those over 2Gb where OS support
has been enabled.  The initially requested memory is no longer
reserved, but as this malloc is able to work with non-contiguous
memory chunks that should not matter.


Bug fixes
---------

Fixed list.files() to properly handle paths like "C:", etc.

Fixed unlink() to accept empty file list for Unix consistency.

Fixed handling of whitespace in Rd2dvi.sh processing of DESCRIPTION
files.

Fixed handling of "--max-mem-size" syntax error on command line.

In RGui, ^T would not transpose the first and second characters on a
line.  (PR#5593)

Fixed junk character at start of a pipe(). (PR#5053)

Rcmd SHLIB was computing dependencies for all C files, not just those
specified on the command line, and building the DLL from all *.o files
in the directory.

The sizes of metafile in pixels were often coming out one pixel more
than requested, so the background was not quite all painted.  Now we
over-estimate.



rw1081
======

Files in inst/ are installed later in the process of installing a
package (at the request of Ray Brownrigg: the build process was as
documented in `Writing R Extensions').  CVS files will not be installed.

The fast bmp/png/jpeg code introduced in R 1.8.0 is used for saving
from menus (and savePlot()) as well as for the devices.

Lines drawn at the extreme top or right of the device region (e.g. by
box(which="outer")) might have been drawn one pixel too far from the
origin and so perhaps clipped.

In 1.8.0 only, the bottom line of pixels was not copied to the file
for png/jpeg/bmp device plots (as the Windows GDI function used was
incorrectly documented).

File src/nmath/dnt.c was not being built for the standalone Rmath library.

packageStatus() now works under Windows.

Fixed instability under some Windows versions associated with