@@ -1,6 +1,6 @@
 You can make an install package (rw????.exe) in the current Windows
-style by using the installer kit Inno Setup 4.0.x (or 3.0.x, x >= 6)
-from jrsoftware.org.
+style by using the installer kit Inno Setup 4.1.5 or later from
+jrsoftware.org.
 
 You need the R installation built completely (see ../INSTALL: this
 includes making bitmap and Tcl/Tk support and the manuals).
